# kata-for-raytracing

./: CMakeLists.txt  README.md
build-test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  raytracer
build-test/Testing/Temporary/: CTestCostData.txt
build-test/src/lodepng/: Makefile  cmake_install.cmake
build-test/src/rayimage/: Makefile  cmake_install.cmake
build-test/src/raymath/: Makefile  cmake_install.cmake
build-test/src/rayscene/: Makefile  cmake_install.cmake
scenes/: empty-scene.json
